--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Toba's Portfolio</title>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -969,10 +969,22 @@
     align-items: center;
   }
 
-  @media only screen and (max-width: 479px) {
-    #contact {
-      width: 90%;
+  @media screen and (max-width: 959px) {
+    #container{
+      width:100%;
     }
+    #aboutContainer{
+      width:100%;
+    }
+    #homeContainer{
+      width:100%;
+    }
+    #aboutInfo{
+      width:50%;
+    }
+    #aboutPictureImg{
+      width:50%;
+    } 
   }
 
   .social {
