--- a/features.html
+++ b/features.html
@@ -59,6 +59,7 @@
           <h2>Home Page - Features</h2>
           <br>
           <ul>
+            <li>URL of Portfolio: <a href="https://tsam137.github.io/IMDCA2/">https://tsam137.github.io/IMDCA2/</a></li>
             <li>The navbar has some <b>icons</b> I added for aesthetics and to allow the user to quickly identify the
               tabs.</li>
             <li>I also added a <b>side navbar</b> that sticks to the right, this navbar has links to my
