--- a/features.html
+++ b/features.html
@@ -40,11 +40,11 @@
 
 
 
-
   <div id="container">
 
     <div class="panel" style="padding: 100px;">
-
+      <h1>URL of Portfolio: <a href="https://tsam137.github.io/IMDCA2/">https://tsam137.github.io/IMDCA2/</a></h1>
+      <br>
       <div id="tabs" style="width: 80%;">
         <div class="w3-bar w3-dark-grey">
           <button class="w3-bar-item w3-button" onclick="openPage('Home')">Home Page</button>
@@ -59,7 +59,6 @@
           <h2>Home Page - Features</h2>
           <br>
           <ul>
-            <li>URL of Portfolio: <a href="https://tsam137.github.io/IMDCA2/">https://tsam137.github.io/IMDCA2/</a></li>
             <li>The navbar has some <b>icons</b> I added for aesthetics and to allow the user to quickly identify the
               tabs.</li>
             <li>I also added a <b>side navbar</b> that sticks to the right, this navbar has links to my
@@ -76,10 +75,10 @@
               enter information to be submitted to me.</li>
             <li>On the right side of the page I added a picture of myself and adjusted the border-radius for aesthetics.
             </li>
-
-
           </ul>
         </div>
+
+  
 
         <div id="About Me" class="w3-container w3-display-container page w3-animate-bottom" style="display:none">
           <h2>About Me Page - Features</h2>
@@ -145,6 +144,8 @@
             <li>Both the left div and the right div slide into through a <b>Transition</b> when the page loads.</li>
           </ul>
         </div>
+
+        
 
         <script>
           function openPage(pageNum) {
