--- a/index.html
+++ b/index.html
@@ -747,6 +747,7 @@
   #aboutHeader {
     font-size: 40px;
     margin-top: 1px;
+    white-space: normal;
   }
 
   #aboutPicture {
@@ -986,6 +987,13 @@
       width:50%;
     } 
   }
+
+  @media screen and (max-width: 1023px){
+    #aboutHeader{
+      width: 70% !important;
+    }
+  }
+
 
   .social {
     position: fixed;
