--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
   <!-- Footer HTML -->
   <footer style="background-color: #333; text-align: center; color: white;">
     <br>
-    <p>Copyright <i class="fa fa-copyright" aria-hidden="true"> 2020 Toba Samuel's Portfolio</i></p>
+    <p>Copyright <i class="fa fa-copyright" aria-hidden="true"> 2020 Toba Samuel - X00131398</i></p>
     <br>
   </footer>
 </body>
