--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                 Projects & Hobbies</a></li>
             <li><a href="#contact" style="scroll-behavior: smooth"> <i class="fa fa-phone" aria-hidden="true"></i>
                 Contact</a></li>
-            <li><a href="features.html" style="scroll-behavior: smooth"> <i class="fa fa-tools" aria-hidden="true"></i>
-                -Features Used-</a></li>
+            <!-- <li><a href="features.html" style="scroll-behavior: smooth"> <i class="fa fa-tools" aria-hidden="true"></i>
+                -Features Used-</a></li> -->
           </ul>
         </div>
       </div>
@@ -208,7 +208,7 @@
                 <li>Data Analysis</li>
                 <li>Server-Side Web Development</li>
                 <br>
-                <h4 style="text-align: end; color: black;">GPA: 2.77</h4>
+                <h4 style="text-align: end; color: black;">GPA: 3.0</h4>
               </ul>
             </div>
 
@@ -377,7 +377,7 @@
           <img src="images/scoilCrest.jpg" alt="Scoil Mhuire" width="200px" height="150px">
           <br>
           <h2>Teachers Assistant</h2>
-          <h4>February 2018 - February 2020</h4>
+          <h4>October 2016 - April 2017</h4>
           <br>
           <p style="text-align:left;">As a teachers assistant in Scoil Mhuire Newbridge I had to plan what I would teach
             the children every week.
@@ -596,15 +596,17 @@
       <a href="https://github.com/tsam137" target="_blank"><i class="fa fa-github" style="font-size:24px"></i></a>
       <a href="https://www.linkedin.com/in/toba-samuel-719b1115a/" target="_blank"><i class="fa fa-linkedin"
           style="font-size:24px"></i></a>
-      <a href="https://www.youtube.com/channel/UCliysMgyzTngM4P0AIIKopQ" target="_blank"><i class="fa fa-youtube"
+      <a href="https://www.youtube.com" target="_blank"><i class="fa fa-youtube"
           style="font-size:24px"></i></a>
+        <a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook"
+            style="font-size:24px"></i></a>
     </div>
   </div>
 
   <!-- Footer HTML -->
   <footer style="background-color: #333; text-align: center; color: white;">
     <br>
-    <p>Copyright <i class="fa fa-copyright" aria-hidden="true"> 2020 Toba Samuel - X00131398</i></p>
+    <p>Copyright <i class="fa fa-copyright" aria-hidden="true"> Toba Samuel 2021 </i></p>
     <br>
   </footer>
 </body>
