--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
           <br>
           <h3 style="text-align:center;">weLearn</h3>
           <br>
-          <p style="text-align:left; padding: 10px;">I am designing a web app called GURU, where users can learn
+          <p style="text-align:left; padding: 10px;">I am designing a web app called weLearn, where users can learn
             languages and teach languages to others that desire to learn them.
             For instance, if a user already knew English and wanted to learn German, they would look through profiles on
             the website and find a user that wanted to learn English and already knew German.
