--- a/index.html
+++ b/index.html
@@ -61,9 +61,13 @@
         <h3>BSc Hons Computing with Software Development </h3>
         <br>
         <div id="homeButtons">
-          <button>Download CV</button>
+          <!-- <button id="btn" >Download CV</button> -->
 
-          <!-- Contact Form -->
+          <form method="get" action="TobaSamuelCV.docx">
+            <button type="submit">Download CV</button>
+         </form>
+
+          <!-- Contact Form
           <div class="w3-container text-center">
             <button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-#333">Contact
               Me</button>
@@ -105,7 +109,7 @@
                 </footer>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
       <br>
@@ -192,7 +196,7 @@
                 <li>Algorithms & Computation</li>
                 <li>Computational Theory</li>
                 <br>
-                <h4 style="text-align: end; color: black;">GPA: 3.00</h4>
+                <h4 style="text-align: end; color: black;">GPA: 3.20 (Expected)</h4>
               </ul>
             </div>
 
@@ -330,8 +334,8 @@
         <div id="workCon1" class="w3-animate-bottom container-fluid">
           <img src="images/sapLogo.jpg" alt="SAP" width="200px" height="150px">
           <br>
-          <h2>Product Support Engineer</h2>
-          <h4>January - August 2020</h4>
+          <h2>Product Support Engineer Intern</h2>
+          <h4>January 2020 - August 2020</h4>
           <br>
           <p style="text-align:left;">My role in the company as a Product Support Engineer was to help customers with
             product deficiencies that arose in the area of Web UI.
@@ -439,7 +443,7 @@
             <h2 style="text-align: center;">4th Year Project</h2>
           </header>
           <br>
-          <h3 style="text-align:center;">weLearn</h3>
+          <h3 style="text-align:center;"><a href="https://we-learn-app.herokuapp.com/" target="_blank"><u>weLearn</u></a></h3>
           <br>
           <p style="text-align:left; padding: 10px;">I am designing a web app called weLearn, where users can learn
             languages and teach languages to others that desire to learn them.
@@ -547,7 +551,7 @@
       <div class="w3-container text-center">
         <div class="w3-modal-content w3-animate-bottom w3-card-4" style=" background-color: #ffffff;color: #000;
        border-radius: 10px; display: flex; ">
-          <div id="contactCard" style="padding:40px; margin: auto;" class="w3-animate-left">
+          <div id="contactCard" style="padding:40px; margin: auto; margin-top: 10px;" class="w3-animate-left">
             <form>
               <i class="fa fa-phone" aria-hidden="true"></i>
               <p> 0874487684</p>
@@ -556,10 +560,10 @@
               <p></i> tobasamuel137@gmail.com</p>
               <br>
               <i class="fa fa-map-marker" aria-hidden="true"></i>
-              <p> </i> Tallaght, Dublin</p>
+              <p> </i> Tallaght, Dublin - (Willing to Relocate)</p>
             </form>
           </div>
-          <div id="contactMe" style="padding:40px; margin: auto; width:60%;" class="w3-animate-right">
+          <!-- <div id="contactMe" style="padding:40px; margin: auto; width:60%;" class="w3-animate-right">
             <form col-md-12>
               <div class="form-group">
                 <label>First Name</label>
@@ -584,7 +588,7 @@
               <input type="submit" class="btn-primary"
                 style="background-color:#333; border-radius: 10px; padding:7.5px;" value="Submit">
             </form>
-          </div>
+          </div> -->
 
 
         </div>
@@ -596,10 +600,10 @@
       <a href="https://github.com/tsam137" target="_blank"><i class="fa fa-github" style="font-size:24px"></i></a>
       <a href="https://www.linkedin.com/in/toba-samuel-719b1115a/" target="_blank"><i class="fa fa-linkedin"
           style="font-size:24px"></i></a>
-      <a href="https://www.youtube.com" target="_blank"><i class="fa fa-youtube"
+      <!-- <a href="https://www.youtube.com" target="_blank"><i class="fa fa-youtube"
           style="font-size:24px"></i></a>
         <a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook"
-            style="font-size:24px"></i></a>
+            style="font-size:24px"></i></a> -->
     </div>
   </div>
 
